# standard-chatml

./: .gitignore  README.md
.github/workflows/: validate-jsonschema.yml
libs/js/: index.js  package-lock.json  package.json
libs/python/: README.md  pyproject.toml
libs/python/standard_chatml/: __init__.py
specs/: chatml-schema.json
